--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.5.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
+    "react-foundation": "^0.9.6",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
