--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-validation": "^0.1.11",
+    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-foundation": "^0.9.6",
     "react-router-dom": "^5.2.0",
