--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-foundation": "^0.9.6",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
